force-app/main/default/objects/ST_Quote__c/ST_Quote__c.object-meta.xml
<CustomObject>
    <label>見積ST</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>見積名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>