force-app/main/default/objects/ST_Quote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>ST_QuouteOpp__r.Account.Name</formula>
    <label>取引先</label>
    <type>Text</type>
</CustomField>