force-app/main/default/objects/ST_Quote__c/fields/Constructionsite__c.field-meta.xml
<CustomField>
    <fullName>Constructionsite__c</fullName>
    <label>工事場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>