force-app/main/default/objects/ST_Quote__c/fields/consumptiontax__c.field-meta.xml
<CustomField>
    <fullName>consumptiontax__c</fullName>
    <formula>subtotal__c  / 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>