force-app/main/default/objects/ST_Quote__c/fields/deadline__c.field-meta.xml
<CustomField>
    <fullName>deadline__c</fullName>
    <label>納期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>