force-app/main/default/objects/ST_Quote__c/fields/deliverysite__c.field-meta.xml
<CustomField>
    <fullName>deliverysite__c</fullName>
    <label>受渡場所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>