force-app/main/default/objects/ST_Quote__c/fields/estimateddate__c.field-meta.xml
<CustomField>
    <fullName>estimateddate__c</fullName>
    <label>見積提出日</label>
    <type>Date</type>
</CustomField>