force-app/main/default/objects/ST_Quote__c/fields/EstimateNum__c.field-meta.xml
<CustomField>
    <fullName>EstimateNum__c</fullName>
    <label>御見積№</label>
    <length>255</length>
    <type>Text</type>
</CustomField>