force-app/main/default/objects/ST_Quote__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>STManager</relationshipName>
    <type>Lookup</type>
</CustomField>