force-app/main/default/objects/ST_Quote__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>