force-app/main/default/objects/ST_Quote__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>工事名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>