force-app/main/default/objects/ST_Quote__c/fields/Paymentterms__c.field-meta.xml
<CustomField>
    <fullName>Paymentterms__c</fullName>
    <label>支払条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>