force-app/main/default/objects/ST_Quote__c/fields/Quotevalidityperiod__c.field-meta.xml
<CustomField>
    <fullName>Quotevalidityperiod__c</fullName>
    <label>見積有効期間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>