force-app/main/default/objects/ST_Quote__c/fields/ST_QuouteOpp__c.field-meta.xml
<CustomField>
    <fullName>ST_QuouteOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>見積</relationshipLabel>
    <relationshipName>ST_QuouteOpp</relationshipName>
    <type>Lookup</type>
</CustomField>