force-app/main/default/objects/ST_Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>編集中</fullName>
                <default>true</default>
                <label>編集中</label>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>