force-app/main/default/objects/ST_Quote__c/fields/subtotal__c.field-meta.xml
<CustomField>
    <fullName>subtotal__c</fullName>
    <label>小計</label>
    <summarizedField>ST_Quotedetails__c.amount__c</summarizedField>
    <summaryForeignKey>ST_Quotedetails__c.ST_Estimate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>