force-app/main/default/objects/ST_Quote__c/fields/Totalestimateamount__c.field-meta.xml
<CustomField>
    <fullName>Totalestimateamount__c</fullName>
    <formula>subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>御見積総金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>