force-app/main/default/objects/ST_Quote__c/fields/totalquantity__c.field-meta.xml
<CustomField>
    <fullName>totalquantity__c</fullName>
    <label>合計数量</label>
    <summarizedField>ST_Quotedetails__c.quantity__c</summarizedField>
    <summaryFilterItems>
        <field>ST_Quotedetails__c.unit__c</field>
        <operation>equals</operation>
        <value>t</value>
    </summaryFilterItems>
    <summaryForeignKey>ST_Quotedetails__c.ST_Estimate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>